--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -88,6 +88,10 @@ iframe.animation
   &.button-primary
     +button-color($primary-color)
 
+// Notices
+.notice
+  +label
+
 // Switches
 // --------
 
