--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -88,6 +88,10 @@ iframe.animation
   &.button-primary
     +button-color($primary-color)
 
+// Notices
+.notice
+  +label
+
 // Switches
 // --------
 
