Polishing off submod docs

--- a/lib/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib/jade/docs/3.x/adding-extensions/index.jade
@@ -206,20 +206,11 @@ block documents
         on markup needed and extras will depend on the component being used.
 
   .document
-    article.article.article-full
+    article.article
       :markdown
         # Add a theme
 
-        ## In Rails
-
-        See [Theming](/docs/#{docsVersion}/theming/#in-rails)
-
-  .document
-    article.article
-      :markdown 
-        ## In Node/Gulp
-
-        Submodule your theme (See "Adding a submodule at the top") into the `lib/sass/themes` directory.  
+        Submodule your theme (See "Adding a submodule at the top") into the `themes` directory.  
 
     article.code
       :markdown
