--- a/rails/app/assets/stylesheets/kickstart_rails/core/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/components/_buttons.sass
@@ -108,7 +108,7 @@
   right: -$space
   border: 1px solid map-get($white, darker)
 
-=button-group-default($background-color, $size)
+=button-group-default($background-color: map-get($white, darker), $size: 1)
   list-style: none
   padding: 0
   margin:
