--- a/rails/app/assets/stylesheets/kickstart_rails/core/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/components/_forms.sass
@@ -76,7 +76,7 @@ select
 
   @content
 
-=form_group-default($layout)
+=form_group-default($layout: 'none')
   display: block
   margin-bottom: $space
 
