Updating docs for import change

--- a/lib/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib/jade/docs/3.x/adding-extensions/index.jade
@@ -182,8 +182,8 @@ block documents
       :markdown
         <span>
 
-            =switch($color: $primary-color)
-              +switch-default($color) 
+            =switch($args...)
+              +switch-default($args...)
 
 
   .document
