--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -25,8 +25,8 @@ block documents
       :markdown
         <span>
 
-            =some-component
-              +some-component-default
+            =some-component($args...)
+              +some-component-default($args...)
 
   .document
     article.article
@@ -38,8 +38,8 @@ block documents
       :markdown
         <span>
 
-            =some-component
-              +some-component-default
+            =some-component($args...)
+              +some-component-default($args...)
               background-color: red
               font-family: courier, monospace
 
@@ -52,7 +52,7 @@ block documents
       :markdown
         <span>
 
-            =some-component
+            =some-component($args...)
               background-color: red
               font-family: courier, monospoace
               padding: 20px
