--- a/lib/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib/jade/docs/3.x/adding-extensions/index.jade
@@ -127,7 +127,7 @@ block documents
       p
         span.notice Use the right directory
         |  From here on, these directions will assume you are working at the directory where
-        | <code>core</code> is located. In Node.js, this should be <code>lib/sass/</code>.
+        | <code>core</code> or <code>themes</code> are located. In Node.js, this should be <code>lib/sass/</code>.
 
       :markdown
         In Rails, this should be the parent directory of your Rails shim (see Shimming below.)
@@ -244,50 +244,45 @@ block documents
             // Now write your own Sass 
 
   .document
-    article.article
+    article.article.article-full
       :markdown
         # Shimming for rails
 
-        ## Add the shim
+        You may need to make a few adjustments in a Rails environment to get
+        third-party extensions working.
 
-        If you are using the kickstart_rails gem and wish to take advantage of the Kickstart store, 
-        you'll just need to do some shimming first so Sass `@import` directories continue to work.
+        Consider the fact that the `@import` paths in your theme are actually
+        pointing to the kickstart_rails gem, installed deep in your filesystem.
 
-        For convenience, we've provided this shim in the store. Find this shim and install it as a 
-        submodule in app/assets/stylesheets
+  .document
+    article.article
+      :markdown
+        ## Vendor library
+
+        By default, the vendor library points to `vendor/_index.sass` in the `kickstart_rails`
+        gem. If you want to add components, you'll need to create the `vendor` directory
+        in `app/assets/stylesheets`.
+
+        Now create `_index.sass` in `vendor.` The complete commands to do this are shown.  
 
     article.code
       :markdown
         <span>
 
             $(~) cd app/assets/stylesheets 
-            $(stylesheets) git submodule add git://github.com/ajkochanowicz/core.git
-
-  .document
-    article.article.article-full
-      :markdown
-        You should now have a directory called "core" in your stylesheets. The files in this directory
-        simply reroute `@imports` to your kickstart_rails gem. There is no duplication of code here.
-
-        This also means you won't need to update this shim when you update kickstart, unless otherwise
-        noted.
+            $(stylesheets) mkdir vendor
+            $(stylesheets) touch vendor/_index.sass
 
   .document
     article.article
       :markdown
-        ## Prepare for 3rd party components
-        
-        Make two other directories in stylesheets, `themes` and `vendor`. These will be the two directories
-        you will use for components and themes.
+        ## Other directories
 
-        In vendor, create a sass file called `_index.sass`. This does not have to contain any content.
-
-        That's it, you're now ready to use 3rd party components. Follow the same instructions on adding
-        components or themes as a node.js user.
+        When installing themes, you should install them in a `themes` directory under
+        `app/assets/stylesheets`.
 
     article.code
       :markdown
         <span>
 
-            $(stylesheets) mkdir themes vendor
-            $(stylesheets) touch vendor/_index.sass
+            $(stylesheets) mkdir themes
