Bleed on full width improved

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -21,7 +21,7 @@ body
 
 #screen
   +screen
-  max-width: $xl-monitor
+  max-width: $xxl-monitor
   box-shadow: 0px 0px $space map-get($gray, darker)
   margin: 0px auto
   background: white
