--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -16,7 +16,7 @@ video
   background-size: 200% 100%
   padding: ($space * 2)
   margin:
-    top: -70px
+    top: -72px
     bottom: $space
   padding-top: 70px
 
@@ -24,7 +24,7 @@ video
     padding: ($space * 4)
     margin-bottom: $space * 4
     height: 500px
-    background-size: 1400px 100%
+    background-size: $xxl-monitor 100%
 
   svg
     display: block
