--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -42,7 +42,11 @@ h3, h4, h5, h6
 
   .fixed-toc
     width: 100%
-    font-size: 0.85rem
+    font-size: 1rem
+    line-height: 2rem
+
+    @media screen and (min-width: $tablet)
+      font-size: 0.85rem
 
     a
       color: map-get($colors, blue)
