Fixing fixed nav for new bleed

--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -96,6 +96,9 @@ h3, h4, h5, h6
       @media screen and (min-width: $xl-monitor)
         left: calc(50vw - #{$xl-monitor/2})
 
+      @media screen and (min-width: $xxl-monitor)
+        left: calc(50vw - #{$xxl-monitor/2})
+
     .fixed-main
       @media screen and (min-width: $phablet)
         margin-left: 50%
