Fixing default button color

--- a/lib/sass/core/components/_buttons.sass
+++ b/lib/sass/core/components/_buttons.sass
@@ -1,4 +1,4 @@
-=button-default($background-color: $secondary-color, $size: 1)
+=button-default($background-color: map-get($white, dark), $size: 1)
   display: inline-block
   cursor: pointer
   text-decoration: none
