--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -55,7 +55,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
 =row
   display: flex
   width: 100%
-  justify-content: space-between
+  justify-content: flex-start
   align-items: stretch
   flex-wrap: wrap
 
