--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -227,105 +227,9 @@ block documents
           .col-12: .col-example 12 columns
 
   .document
-    article.article.article-full
-      :markdown
-        # Right offsets
-
-        An interesting thing happens when using CSS flexbox for a grid: When the
-        columns don't add up to 12, they space themselves out (thanks to the `space-between`
-        property).
-
-        Look at the difference between these two grids:
-
-      .example
-        .row
-          .col-3: .col-example 3 columns
-          .col-6.col-left-3: .col-example 6 columns with 3 column left
-          .col-3: .col-example 3 columns
-          .col-6: .col-example 6 columns
-
-      :markdown
-        They look so similar, you might say the 3 column left isn't necessary in the first.
-
-        A left would be necessary, however, if we didn't want the last column to
-        automatically go the very left. Maybe we just want 1 column of space
-        between the two.
-
-      .example
-        .row
-          .col-3: .col-example 3 columns
-          .col-6.col-left-1: .col-example 6 columns with 1 column left
-
-      :markdown
-        As you can see, it still looks the same. This is for the same reason. The
-        columns aren't adding up to 12, so they automatically create the necessary
-        space between themselves to fill the 12 column grid. Let's see what happens
-        if we add a another two column.
-
-      .example
-        .row
-          .col-3: .col-example 3 columns
-          .col-6.col-left-1: .col-example 6 columns with 1 column left
-          .col-2: .col-example 2
-
-      :markdown
-        But what if we wanted the columns to feed in from right to left, without the
-        automatic spacing in between (with the exception of the gutters)?
-
-        This is where right is handy. Just as we can left the columns to the left, we
-        can also right the columns to the right.
-
-      .example
-        .row
-          .col-3: .col-example 3 columns
-          .col-6.col-right-3: .col-example 6 columns with 3 column right
-          .col-3: .col-example 3 columns
-          .col-6: .col-example 6 columns
-
-  .document
     article.article
-      :markdown
-        Because we already have a total of 9 columns used up, we need to
-        finish (right) the remaining three to complete 12 columns.
-
-    article.code
-      .ifnot-semantic
-        :markdown
-          <span>
-
-              ...
-              <div class="col-3">
-                Three columns
-              </div>
-              <div class="col-6 col-right-3">
-                Six columns
-              </div>
-
-      .if-semantic
-        :markdown
-          <span>
-
-              ...
-              <div class="news">
-                Three columns
-              </div>
-              <div class="events">
-                Six columns
-              </div>
-
-              .news {
-                @include column(3); // 3 columns
-              }
-              .events {
-                @include column(6, 3); // 6 columns, 3 right
-                @include column($columns: 6, $right: 3) // Alternative way of writing the above.
-              }
-
-  .document
-    article.article
-      h1 Left offsets
-
-      p Right offsets will take care of most of your offset needs, but in some rare cases, a left offset is needed.
+      h1 Offsets
+      p Offsets allow you to add column-measured space to the side of a column.
 
       .example
         .row
@@ -368,7 +272,7 @@ block documents
   .document
     article.article
       h2 Shortcuts
-      p lefts can also use semantic shortcuts.
+      p Offsets can also use semantic shortcuts.
 
       .example
         .row
