Grid docs updates. Might be done

--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -195,7 +195,7 @@ block documents
           .col-3.col-left-6: .col-example 3 columns, 6 column left
 
         .row
-          .col-6.col-right-6: .col-example 6 columns, 6 column right
+          .col-6: .col-example 6 columns
 
         .row
           .col-6: .col-example 6 columns
@@ -209,10 +209,10 @@ block documents
           .col-4: .col-example 4 columns
 
         .row
-          .col-4.col-left-4.col-right-4: .col-example 4 columns, 4 column left, 4 column right
+          .col-4.col-left-4: .col-example 4 columns, 4 column left
 
         .row
-          .col-4.col-right-4: .col-example 4 columns, 4 column right
+          .col-4: .col-example 4 columns 
 
         .row
           .col-4.col-left-4: .col-example 4 columns, 4 column left
@@ -255,7 +255,7 @@ block documents
               </div>
 
               .reminder {
-                @include column(6, 0, 6);
+                @include column(6, 6);
               } 
 
   .document
