fixing bug in rails gem

--- a/lib/sass/themes/default/theme.sass
+++ b/lib/sass/themes/default/theme.sass
@@ -8,9 +8,6 @@
 // changing anything.
 //
 
-// TODO: This would be the second time importing in rails. prepend this line
-// via gulp.
-
 @import core/_normalize
 
 // Variables
@@ -48,7 +45,7 @@ $scalingFactor: 0.2vw
 $rootElement: (paddingV: 5px, paddingH: 12px, border-radius: 3px)
 
 $default-font: $body-font-family
-$default-font-size: $base-font-size  // TODO: Why?
+$default-font-size: $base-font-size
 
 //
 // Core styling
