--- a/lib/sass/core/components/_buttons.sass
+++ b/lib/sass/core/components/_buttons.sass
@@ -1,4 +1,4 @@
-=button-default($background-color: map-get($white, dark), $size: 1)
+=button-default($background-color: map-get($white, darker), $size: 1)
   display: inline-block
   cursor: pointer
   text-decoration: none
@@ -67,7 +67,7 @@
   line-height: $size * $default-line-height
   margin-bottom: 0
   font-size: ($default-font-size - 2) * $size
-  border-color: hsla(0, 0%, 0%, 0.15)
+  border-color: transparent
   padding:
     left: $size * $size * map-get($rootElement, paddingH)
     right: $size * $size * map-get($rootElement, paddingH)
