--- a/lib/sass/pages/docs/ui/navigation.sass
+++ b/lib/sass/pages/docs/ui/navigation.sass
@@ -4,7 +4,7 @@
   +navbar
 
   &.navbar-blue
-    +navbar-color(map-get($colors, blue))
+    +navbar-color(map-get($black, lighter))
 
 .pagination
   +pagination
