--- a/lib/sass/themes/default/theme.sass
+++ b/lib/sass/themes/default/theme.sass
@@ -14,7 +14,7 @@
 // ---------
 
 // Grayscale
-$white: (dark: #F7F7F7, darker: #DDD, darkest: #CCC)
+$white: (dark: #F7F7F7, darker: #EDEDED, darkest: #CCC)
 $gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, darkest: #555)
 $black: (lightest: #444, lighter: #333, light: #222)
 
