Fixes to pagination with buttons

--- a/lib/sass/core/components/_pagination.sass
+++ b/lib/sass/core/components/_pagination.sass
@@ -6,6 +6,6 @@
   align-content: space-between
 
   > ul
-    +button-group-default($background-color: map-get($white, dark), $size: 1)
+    +button-group-default($size: 1)
 
   @content
