--- a/lib/sass/themes/default/theme.sass
+++ b/lib/sass/themes/default/theme.sass
@@ -19,7 +19,7 @@ $gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, d
 $black: (lightest: #444, lighter: #333, light: #222)
 
 // Rainbow
-$colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: cornflowerblue, violet: darkmagenta)
+$colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: #47A5DF, violet: darkmagenta)
 
 // Vendor libraries
 @import url(//fonts.googleapis.com/css?family=Lato:300,400,700,400italic)
