fixing spelling error

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -21,7 +21,7 @@ block content
 
     .captions
       .caption
-        p Kickstart is the only library to use <strong>either</strong> semantic CSS mixins or discrete CSS classes for styling.  
+        p Kickstart is the only library to use <strong>either</strong> semantic CSS mixins or CSS classes for styling.  
 
       .caption
         h1 No jQuery Required
@@ -41,7 +41,8 @@ block content
       .use-in-any-project
         h1 Use in any project
         img(src="#")
-        p The Kickstart library is maintained [with Gulp](/docs/#{docsVersion}/#nodejs) and ported as a [Rails Gem](/docs/#{docsVersion}/#rails).
+        :markdown
+          The Kickstart library is maintained [with Gulp](/docs/#{docsVersion}/#nodejs) and ported as a [Rails Gem](/docs/#{docsVersion}/#rails).
 
       .faster-and-lighter-than-bootstrap
         h1 Faster and lighter than Bootstrap
