--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -30,7 +30,30 @@ block content
     article.home-wrapper
       section.loves-to-be-extended
         h1 Loves to be Extended
-        img(src="img/ui.png")
+
+        .ui
+          .extension
+            img(src="#")
+
+            .extension-details
+              h1 Navigation Bar
+              h2 Core Library
+
+          .extension
+            img(src="#")
+
+            .extension-details
+              h1 Datepicker
+              h2 by Ponsonby Britt
+
+          .extension
+            img(src="#")
+
+            .extension-details
+              h1 Progress Bar
+              h2 by Claire Maddox
+
+          img(src="img/ui.png")
         p 
           | The library is just the core. Kickstart is designed to be extended and themed via the&nbsp;
           a(href="http://kickstart-store.com") Kickstart Store
@@ -40,7 +63,9 @@ block content
 
       .use-in-any-project
         h1 Use in any project
-        img(src="#")
+        img(src="img/rubyonrails.png")
+        img(src="img/nodejs.png")
+        img(src="img/html5css3.jpg")
         :markdown
           The Kickstart library is maintained [with Gulp](/docs/#{docsVersion}/#nodejs) and ported as a [Rails Gem](/docs/#{docsVersion}/#rails).
 
