Fix to thumbnails

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -35,21 +35,21 @@ block content
           .extension
             img(src="#")
 
-            .extension-details
+            article
               h1 Navigation Bar
               h2 Core Library
 
           .extension
             img(src="#")
 
-            .extension-details
+            article
               h1 Datepicker
               h2 by Ponsonby Britt
 
           .extension
             img(src="#")
 
-            .extension-details
+            article
               h1 Progress Bar
               h2 by Claire Maddox
 
