--- a/lib/sass/core/components/_images.sass
+++ b/lib/sass/core/components/_images.sass
@@ -9,6 +9,8 @@
     flex-shrink: 0
 
   > :not(img)
+    width: 100%
+
     + img, + figure
       margin-left: $space/2
 
@@ -18,6 +20,7 @@
   > img, > figure
     + :not(img)
       margin-left: $space/2
+      width: 100%
 
   @content
 
