--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -112,6 +112,20 @@ section.blue
     display: block
     margin-bottom: $space
 
+.ui
+  position: relative
+
+  .extension
+    background: white
+    height: 100px
+
+    img
+      width: 100px
+      height: 100px
+
+    +thumbnail-content
+    
+
 .last-pitch
   .use-in-any-project,
   .faster-and-lighter-than-bootstrap
