--- a/lib/sass/themes/default/theme.sass
+++ b/lib/sass/themes/default/theme.sass
@@ -82,30 +82,39 @@ pre
 
 =hero
   +hero-default
+  @content
 
 =heading-xxl
   +heading-xxl-default
+  @content
 
 =heading-xl
   +heading-xl-default
+  @content
 
 =heading-lg
   +heading-lg-default
+  @content
 
 =heading-md
   +heading-md-default
+  @content
 
 =heading-rg
   +heading-rg-default
+  @content
 
 =heading-sm
   +heading-sm-default
+  @content
 
 =heading-xs
   +heading-xs-default
+  @content
 
 =heading-xxs
   +heading-xxs-default
+  @content
 
 h1, h2, h3, h4, h5, h6
   font-family: $heading-font-family
