--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -32,22 +32,22 @@ block content
         h1 Loves to be Extended
 
         .ui
-          .extension
-            img(src="#")
+          .extension.extension-one
+            img(src="img/avatar-core.png")
 
             article
               h1 Navigation Bar
               h2 Core Library
 
-          .extension
-            img(src="#")
+          .extension.extension-two
+            img(src="img/avatar2.png")
 
             article
               h1 Datepicker
               h2 by Ponsonby Britt
 
-          .extension
-            img(src="#")
+          .extension.extension-three
+            img(src="img/avatar1.png")
 
             article
               h1 Progress Bar
