--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -154,7 +154,7 @@ section.blue
         right: 0
 
       &.extension-three
-        top: 70%
+        bottom: 8%
 
 .last-pitch
   .use-in-any-project,
